--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-minsurance.provider.url=http://localhost:8080/insurance-service/getAllPlans
+insurance.provider.url=http://localhost:8080/insurance-service/getAllPlans
